[PAGOPA-1446] chore: improve code quality