@@ -15,7 +15,6 @@ import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
 
 import java.io.*;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 import java.util.zip.ZipEntry;
@@ -36,20 +35,22 @@ public class BlobService {
     @Value("${zip.entries}")
     private int zipMaxEntries; // Maximum number of entries allowed in the zip file
 
-    private static List<String> ALLOWABLE_EXTENSIONS = Arrays.asList("json");
+    private final static List<String> ALLOWABLE_EXTENSIONS = List.of("json");
 
-    private static List<String> VALID_UPLOAD_EXTENSION = Arrays.asList("zip");
+    private final static List<String> VALID_UPLOAD_EXTENSION = List.of("zip"); ;
 
     private ObjectMapper objectMapper;
 
-    @Inject
-    BlobStorageRepository blobStorageRepository;
+    private BlobStorageRepository blobStorageRepository;
+    private StatusService statusService;
+    private Validator validator;
 
     @Inject
-    StatusService statusService;
-
-    @Inject
-    Validator validator;
+    public BlobService(BlobStorageRepository blobStorageRepository, StatusService statusService, Validator validator) {
+        this.blobStorageRepository = blobStorageRepository;
+        this.statusService = statusService;
+        this.validator = validator;
+    }
 
     @PostConstruct
     public void init() {
@@ -79,10 +80,10 @@ public class BlobService {
             constraintViolations = validator.validate(paymentPositionsModel);
             if(!constraintViolations.isEmpty()) {
                 log.error("Validation error for object related to " + id + ": " + paymentPositionModel);
-                for(ConstraintViolation cv : constraintViolations) {
-                    log.error("Invalid value: " + cv.getMessage());
-                    log.error("Invalid value: " + cv.getConstraintDescriptor());
+                for(ConstraintViolation<PaymentPositionsModel> cv : constraintViolations) {
                     log.error("Invalid value: " + cv.getInvalidValue());
+                    log.error("Invalid value message: " + cv.getMessage());
+                    log.error("Invalid value descriptor: " + cv.getConstraintDescriptor());
                 }
                 return false;
             }
@@ -129,7 +130,10 @@ public class BlobService {
 
                     // Disable auto-execution for extracted files
                     outputFile = new File(sanitizedOutputPath);
-                    outputFile.setExecutable(false);
+                    boolean executableOff = outputFile.setExecutable(false);
+                    if(!executableOff) {
+                        log.error("The underlying file system does not implement an execution permission and the operation failed.");
+                    }
 
                     final FileOutputStream fos = new FileOutputStream(outputFile);
                     int len;
@@ -177,7 +181,7 @@ public class BlobService {
         }
 
         // Replace invalid characters with underscores
-        fileName = fileName.replaceAll("[^\\w\\._-]", "_");
+        fileName = fileName.replaceAll("[^\\w._-]", "_");
 
         // Normalize file name to lower case
         fileName = fileName.toLowerCase();
